[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/AssignBeePanel.gd" id="1"]

[sub_resource type="Animation" id="1"]
resource_name = "slide_in"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [400.0, 0.0]
}

[sub_resource type="Animation" id="2"]
resource_name = "slide_out"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [0.0, 400.0]
}

[sub_resource type="AnimationLibrary" id="3"]
_anims = {
"slide_in": SubResource("1"),
"slide_out": SubResource("2")
}

[node name="AssignBeePanel" type="Control"]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = 40.0
offset_right = -24.0
offset_bottom = -40.0
position = Vector2(400, 0)
script = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("3")
}

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Layout" type="VBoxContainer" parent="Panel"]
layout_mode = 2
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Title" type="Label" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Assign Bee"
horizontal_alignment = 1

[node name="ListMargin" type="MarginContainer" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 4
custom_constants/margin_top = 4
custom_constants/margin_right = 4
custom_constants/margin_bottom = 4

[node name="Scroll" type="ScrollContainer" parent="Panel/Layout/ListMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="BeeList" type="VBoxContainer" parent="Panel/Layout/ListMargin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Footer" type="HBoxContainer" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Hint" type="Label" parent="Panel/Layout/Footer"]
layout_mode = 2
text = "Space = Assign    Z = Cancel"
horizontal_alignment = 1

